fix entity following range